--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
           document.getElementById("nav-bar-profile").remove();
           document.getElementById("with-login1").className = "text-center";
           document.getElementById("with-login1").innerHTML =
-            "<div><h1 class='font-semibold mb-2'>댓글은 로그인후 작성 가능합니다.</h1></div>";
+            "<div><h1 class='font-semibold mb-2 dark:text-gray-400'>댓글은 로그인후 작성 가능합니다.</h1></div>";
           document.getElementById("with-login2").className = "hidden";
           document.getElementById("with-login3").className = "hidden";
         }
