for the dark mode
the last change for dark mode

--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@
                   class="flex justify-center border-t border-b py-1"
                   id="no-comments"
                 >
-                  <div class="-space-x-2">댓글 없음</div>
+                  <div class="-space-x-2 dark:text-gray-400">댓글 없음</div>
                 </div>
               </div>`;
         document.getElementById("comment-content").value = "";
