--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
 
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyDZOwgMxWu87by_E-2NWqWtcrNpQxAhT8o",
+        apiKey: process.env.API_KEY,
         authDomain: "mboard-49849.firebaseapp.com",
         projectId: "mboard-49849",
         storageBucket: "mboard-49849.appspot.com",
