환경변수 설정 확인

--- a/login.html
+++ b/login.html
@@ -107,8 +107,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
 
     <script>
+      import API_KEY from "./env";
+
       const firebaseConfig = {
-        apiKey: "AIzaSyDZOwgMxWu87by_E-2NWqWtcrNpQxAhT8o",
+        apiKey: API_KEY,
         authDomain: "mboard-49849.firebaseapp.com",
         projectId: "mboard-49849",
         storageBucket: "mboard-49849.appspot.com",
