환경변수 설정 확인

--- a/login.html
+++ b/login.html
@@ -107,10 +107,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
 
     <script>
-      import API_KEY from "./env";
-
       const firebaseConfig = {
-        apiKey: API_KEY,
+        apiKey: "AIzaSyDZOwgMxWu87by_E-2NWqWtcrNpQxAhT8o",
         authDomain: "mboard-49849.firebaseapp.com",
         projectId: "mboard-49849",
         storageBucket: "mboard-49849.appspot.com",
